version/0.9/_sources/examples/gallery_examples/04-analyses/update_ict_properties.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples\gallery_examples\04-analyses\update_ict_properties.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_gallery_examples_04-analyses_update_ict_properties.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_gallery_examples_04-analyses_update_ict_properties.py:


.. _ref_sherlock_update_ict_props:

================
Run ICT Analysis
================

This example demonstrates how to connect to the Sherlock gRPC service, import a project,
and configure ICT analysis properties.

Description
-----------
Sherlock allows you to perform ICT (In-Circuit Test) analysis.
This script performs the following steps:
- Connect to the Sherlock service.
- Import a project.
- Configure the properties for ICT analysis.

For further details, refer to the official documentation on ICT analysis in Sherlock.

.. GENERATED FROM PYTHON SOURCE LINES 39-51

.. code-block:: Python



    import os

    from examples.examples_globals import get_sherlock_tutorial_path

    from ansys.sherlock.core import launcher
    from ansys.sherlock.core.errors import (
        SherlockImportProjectZipArchiveError,
        SherlockUpdateICTAnalysisPropsError,
    )


.. GENERATED FROM PYTHON SOURCE LINES 53-56

Connect to Sherlock
===================
Connect to the Sherlock service and ensure proper initialization.

.. GENERATED FROM PYTHON SOURCE LINES 56-59

.. code-block:: Python


    sherlock = launcher.connect(port=9092, timeout=10)


.. GENERATED FROM PYTHON SOURCE LINES 60-63

Delete Project
==============
Delete the project if it already exists.

.. GENERATED FROM PYTHON SOURCE LINES 63-70

.. code-block:: Python


    try:
        sherlock.project.delete_project("Test")
        print("Project deleted successfully.")
    except Exception:
        pass


.. GENERATED FROM PYTHON SOURCE LINES 71-74

Import Tutorial Project
========================
Import the tutorial project zip archive from the Sherlock tutorial directory.

.. GENERATED FROM PYTHON SOURCE LINES 74-85

.. code-block:: Python


    try:
        sherlock.project.import_project_zip_archive(
            project="Test",
            category="Demos",
            archive_file=os.path.join(get_sherlock_tutorial_path(), "Auto Relay Project.zip"),
        )
        print("Tutorial project imported successfully.")
    except SherlockImportProjectZipArchiveError as e:
        print(f"Error importing project zip archive: {e}")


.. GENERATED FROM PYTHON SOURCE LINES 86-89

Update ICT Analysis Properties
==============================
Configure properties for ICT analysis.

.. GENERATED FROM PYTHON SOURCE LINES 89-108

.. code-block:: Python


    try:
        # Update properties for ICT analysis
        sherlock.analysis.update_ict_analysis_props(
            project="Test",
            ict_analysis_properties=[
                {
                    "cca_name": "Auto Relay",
                    "ict_application_time": 2,
                    "ict_application_time_units": "sec",
                    "ict_number_of_events": 10,
                    "part_validation_enabled": False,
                    "require_material_assignment_enabled": False,
                }
            ],
        )
        print("ICT analysis properties updated successfully.")
    except SherlockUpdateICTAnalysisPropsError as e:
        print(f"Error updating ICT analysis properties: {e}")


.. _sphx_glr_download_examples_gallery_examples_04-analyses_update_ict_properties.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: update_ict_properties.ipynb <update_ict_properties.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: update_ict_properties.py <update_ict_properties.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: update_ict_properties.zip <update_ict_properties.zip>`
